tests/type/errors/bad-assign-procedure.typedsol
4:5 error: Mismatched types for assignment